--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sort Visualizer</title>
   </head>
   <body>
-    
+    <div class="title">
+      <h3>Sort Visualizer</h3>
+    </div>
+    <div class="algo-container">
+      <div class="algo-options">
+          <h3>Options</h3>
+      </div>
+      <div class="spacing"></div>
+      <div class="bars">
+          <h3>Bars</h3>
+      </div>
+    </div>
+    <div class="function-buttons">
+      <button>
+        SORT
+      </button>
+      <button>
+        PAUSE
+      </button>
+      <button>
+        RESET
+      </button>
+    </div>
   </body>
 </html>
