--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <div class="algo-container">
       <div class="algo-options">
           <h3>Options</h3>
+          <ul class="options-list">
+            <li>
+              <p>
+                Algorithm:
+              </p>
+              <input type="text">
+            </li>
+            <li>
+              <p>
+                Size:
+              </p>
+              <input type="text">
+            </li>
+            <li>
+              <p>
+                Delay:
+              </p>
+              <input type="text">
+            </li>
+          </ul>
       </div>
       <div class="spacing"></div>
       <div class="bars">
